STM32F4xx/.metadata/.plugins/org.eclipse.cdt.ui/System_Tick_Timers.build.log
12:04:39 **** Incremental Build of configuration Debug for project System_Tick_Timers ****
make -j8 all 
arm-none-eabi-gcc "../Src/systick.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DNUCLEO_F401RE -DSTM32 -DSTM32F401RETx -DSTM32F4 -DSTM32F401xC -DSTM32F401xE -c -I../Inc -I"C:/Users/ravindra/Desktop/STM32embedded/STM32Cube_FW_F4_V1.27.0/Drivers/CMSIS/Core/Include" -I"C:/Users/ravindra/Desktop/STM32embedded/STM32Cube_FW_F4_V1.27.0/Drivers/CMSIS/Device/ST/STM32F4xx/Include" -I"C:/Users/ravindra/Desktop/KJ/STM32embedded/Embedded_Driver_Development/target/System_Tick_Timers/Inc" -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Src/systick.d" -MT"Src/systick.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Src/systick.o"
../Src/systick.c: In function 'systickdelay':
../Src/systick.c:19:9: error: 'SysTick' undeclared (first use in this function)
   19 |         SysTick->LOAD=SYSTICK_LOAD_VAL;
      |         ^~~~~~~
../Src/systick.c:19:9: note: each undeclared identifier is reported only once for each function it appears in
make: *** [Src/subdir.mk:28: Src/systick.o] Error 1
"make -j8 all" terminated with exit code 2. Build might be incomplete.

12:04:40 Build Failed. 2 errors, 0 warnings. (took 1s.103ms)

